<resources>
    <string name="app_name">CoolChat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nick</string>
    <string name="nav_header_subtitle">s_hi123@163.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_quit">Quit</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="blank_username">Fiona</string>
    <string name="username">username</string>
    <string name="name">姓名</string>
    <string name="phone_num">电话号码</string>
    <string name="submit">提 交</string>
    <string name="email">邮箱</string>
    <string name="address">家庭住址</string>
    <string name="company">公司</string>

    <string name="default_message">[Audio]</string>
    <string name="mark_unread">标为未读</string>
    <string name="sticky_top">置顶聊天</string>
    <string name="delete_conversation">删除聊天</string>
    <string name="unFollow">取消关注</string>
    <string name="default_time">12:12</string>
    <string name="one">1</string>
    <string name="coolchat">酷聊</string>
    <string name="NA">未知好友</string>
    <string name="send">发送</string>
    <string name="nullMsg">空白消息</string>
    <string name="title_activity_login">登陆</string>
    <string name="delete">删除</string>
    <string name="more">更多</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
</resources>
