<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_height">

    <FrameLayout
        android:id="@+id/item_coolchat_main_layout_headimg"
        android:layout_width="@dimen/coolchat_head_img_layout"
        android:layout_height="@dimen/coolchat_head_img_layout"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/item_margin_left_10dp"
        android:layout_marginStart="@dimen/item_margin_left_10dp">

        <ImageView
            android:id="@+id/item_coolchat_main_iv_headimg"
            android:layout_width="@dimen/coolchat_img_height"
            android:layout_height="@dimen/coolchat_img_height"
            android:layout_gravity="center"
            app:srcCompat="@drawable/hdimg_3"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/item_coolchat_main_iv_unread"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="right"
            android:layout_marginLeft="5dp"
            android:background="@drawable/badge"
            android:gravity="center"
            android:text="@string/one"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/content_text_small"
            android:layout_marginStart="5dp"
            tools:ignore="RtlHardcoded" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/margin_img"
        android:layout_toRightOf="@id/item_coolchat_main_layout_headimg"
        android:orientation="vertical"
        android:layout_toEndOf="@id/item_coolchat_main_layout_headimg"
        android:layout_marginStart="@dimen/margin_img">

        <TextView
            android:id="@+id/item_coolchat_main_tv_username"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin"
            android:layout_weight="1"
            android:text="@string/blank_username"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/content_text_16sp" />

        <TextView
            android:id="@+id/item_coolchat_main_tv_lastmsg"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/margin"
            android:layout_weight="1"
            android:text="@string/default_message"
            android:textSize="@dimen/content_text_14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/coolchat_img_height"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/item_margin_left"
        android:orientation="vertical"
        android:layout_marginEnd="@dimen/item_margin_left"
        android:layout_alignParentEnd="true"
        tools:ignore="RelativeOverlap">

        <TextView
            android:id="@+id/item_coolchat_main_tv_time"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin"
            android:layout_weight="1"
            android:text="@string/default_time"
            android:textSize="@dimen/content_text_14sp" />

        <ImageView
            android:id="@+id/item_coolchat_main_tv_mute"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/mute"
            tools:ignore="RtlHardcoded"
            android:contentDescription="@string/todo" />
    </LinearLayout>
</RelativeLayout>